--- a/SmartZone.DataObjects/SmartZone.DataObjects.csproj
+++ b/SmartZone.DataObjects/SmartZone.DataObjects.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SmartZone.Entities\SmartZone.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
