--- a/SmartZoneService/appsettings.json
+++ b/SmartZoneService/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SmartZoneContext": "Data Source=DESKTOP-9ABBS06;Initial Catalog=SmartZoneService_Db;Integrated Security=SSPI"
+    "SmartZoneContext": "Data Source=NHATTAN;Initial Catalog=SmartZoneService_Db;Integrated Security=SSPI"
   }
 }
