--- a/SmartZoneService/appsettings.json
+++ b/SmartZoneService/appsettings.json
@@ -9,5 +9,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SmartZoneContext": "Data Source=NHATTAN;Initial Catalog=SmartZoneService_Db;Integrated Security=SSPI"
+  },
+  "ApplicationSettings": {
+    "JWT_Secret": "1234567890123456"
   }
 }
